Current degrees functions were deleted.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <img
               class="sunicon1"
-              src="src/free-icon-sun-5497397 (1).png"
+              src="src/sun-icon.png"
               alt="sunny icon"
               height="42px"
               width="45px"
@@ -55,7 +55,7 @@
           <br />
           <img
             class="icons"
-            src="src/free-icon-sun-5497397 (1).png"
+            src="src/sun-icon.png"
             height="25px"
             width="25px"
             alt="sun"
@@ -68,7 +68,7 @@
           <br />
           <img
             class="icons"
-            src="src/free-icon-sun-5497397 (1).png"
+            src="src/sun-icon.png"
             height="25px"
             width="25px"
             alt="sun"
@@ -81,7 +81,7 @@
           <br />
           <img
             class="icons"
-            src="src/cloudy-day.png"
+            src="src/cloudy.png"
             alt="cloudy"
             height="25px"
             width="25px"
@@ -94,7 +94,7 @@
           <br />
           <img
             class="icons"
-            src="src/free-icon-sun-5497397 (1).png"
+            src="src/sun-icon.png"
             height="25px"
             width="25px"
             alt="sun"
@@ -107,7 +107,7 @@
           <br />
           <img
             class="icons"
-            src="src/cloudy-day.png"
+            src="src/cloudy.png"
             alt="cloudy"
             height="25px"
             width="25px"
@@ -120,7 +120,7 @@
           <br />
           <img
             class="icons"
-            src="src/free-icon-sun-5497397 (1).png"
+            src="src/sun-icon.png"
             height="25px"
             width="25px"
             alt="sun"
