Link to the GitHub repository added.

--- a/index.html
+++ b/index.html
@@ -130,6 +130,14 @@
         </div>
       </div>
     </div>
+    <div>
+      <small>
+        <a href="https://github.com/chavykina/Weather-app" target="_blank">
+          Open-sourse code</a
+        >
+        , by Olena Chavykina
+      </small>
+    </div>
     <script src="src/javascript.js"></script>
   </body>
 </html>
