--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=s, initial-scale=1.0" />
-    <title>Weather app</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
+    <title>Weather app</title>
   </head>
   <body>
     <div class="wrapper">
@@ -39,13 +39,19 @@
             <button>Search</button>
             <button class="currentButton">Current</button>
           </form>
-          <p class="maindegrees">
-            <span class="scale"> 25 </span>
-            <span class="degrees-link">
-              <a href="#" id="celsium"> °C </a> |
-              <a href="#" id="fahrenheit">°F</a>
-            </span>
-          </p>
+          <div class="row">
+            <div class="footer-right">
+              <div class="scale">25</div>
+              <span class="degrees-link">
+                <a href="#" id="celsium"> °C </a> |
+                <a href="#" id="fahrenheit">°F</a>
+              </span>
+            </div>
+            <ul class="descriptionWeather">
+              <li>Humidity:<span id="humidity"></span></li>
+              <li>Wind speed: <span id="wind"></span></li>
+            </ul>
+          </div>
         </div>
       </div>
 
