Current button removed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
             />
             <br />
             <button>Search</button>
-            <button class="currentButton">Current</button>
           </form>
           <div class="row">
             <div class="footer-right">
@@ -48,8 +47,8 @@
               </span>
             </div>
             <ul class="descriptionWeather">
-              <li>Humidity:<span id="humidity"></span></li>
-              <li>Wind speed: <span id="wind"></span></li>
+              <li>Humidity: <span id="humidity"></span>%</li>
+              <li>Wind: <span id="wind"></span>km/h</li>
             </ul>
           </div>
         </div>
