weather icon, degree links were changed

--- a/index.html
+++ b/index.html
@@ -13,17 +13,10 @@
       <div class="header">
         <div>
           <div class="headerleft">
-            <p class="main">Kharkiv</p>
-            <p id="current-date"><em> </em></p>
-
-            <img
-              class="sunicon1"
-              src="src/sun-icon.png"
-              alt="sunny icon"
-              height="42px"
-              width="45px"
-            />
-            <p class="main1">Sunny</p>
+            <p class="main"></p>
+            <p id="current-date"></p>
+            <img class="sunicon1" src="" alt="" height="45px" width="50px" />
+            <p class="main1"></p>
           </div>
         </div>
         <div class="form">
@@ -36,19 +29,19 @@
               id="chooseAcity"
             />
             <br />
-            <button>Search</button>
           </form>
+          <button class="searchButton">Search</button>
           <div class="row">
             <div class="footer-right">
-              <div class="scale">25</div>
+              <div class="scale"></div>
               <span class="degrees-link">
-                <a href="#" id="celsium"> °C </a> |
+                <a href="#" id="celsium" class="active"> °C </a> |
                 <a href="#" id="fahrenheit">°F</a>
               </span>
             </div>
             <ul class="descriptionWeather">
               <li>Humidity: <span id="humidity"></span>%</li>
-              <li>Wind: <span id="wind"></span>km/h</li>
+              <li>Wind: <span id="wind"></span> km/h</li>
             </ul>
           </div>
         </div>
