Background (design) was changed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class="headerleft">
             <p class="main"></p>
             <p id="current-date"></p>
-            <img class="sunicon1" src="" alt="" height="45px" width="50px" />
+            <img class="sunicon1" src="" alt="" height="77px" width="83px" />
             <p class="main1"></p>
           </div>
         </div>
@@ -30,12 +30,13 @@
             />
             <br />
           </form>
-          <button class="searchButton">Search</button>
+          <button id="searchButton">Search</button>
           <div class="row">
             <div class="footer-right">
               <div class="scale"></div>
               <span class="degrees-link">
-                <a href="#" id="celsium" class="active"> °C </a> |
+                <a href="#" id="celsium" class="active"> °C </a>
+                |
                 <a href="#" id="fahrenheit">°F</a>
               </span>
             </div>
