--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=s, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather app</title>
@@ -30,7 +30,7 @@
             />
             <br />
           </form>
-          <button id="searchButton">Search</button>
+          <button class="searchButton">Search</button>
           <div class="row">
             <div class="footer-right">
               <div class="scale"></div>
