Button settings were changed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             />
             <br />
           </form>
-          <button class="searchButton">Search</button>
+          <button>Search</button>
           <div class="row">
             <div class="footer-right">
               <div class="scale"></div>
