--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </div>
         </div>
         <div class="form">
-          <form id="search-form">
+          <form id="search-form" type="submit">
             <input
               type="text"
               placeholder="Choose a city.."
@@ -29,8 +29,8 @@
               id="chooseAcity"
             />
             <br />
+            <button>Search</button>
           </form>
-          <button>Search</button>
           <div class="row">
             <div class="footer-right">
               <div class="scale"></div>
