Button type submit addded

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </div>
         </div>
         <div class="form">
-          <form id="search-form" type="submit">
+          <form id="search-form">
             <input
               type="text"
               placeholder="Choose a city.."
@@ -29,7 +29,7 @@
               id="chooseAcity"
             />
             <br />
-            <button>Search</button>
+            <button type="submit">Search</button>
           </form>
           <div class="row">
             <div class="footer-right">
