The footer was changed and improved

--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
           <div class="row">
             <div class="footer-right">
               <div class="scale"></div>
-              <span class="degrees-link">
-                <a href="#" id="celsium" class="active"> °C </a>
-                |
-                <a href="#" id="fahrenheit">°F</a>
-              </span>
+              <span class="degrees-link"> °C </span>
             </div>
             <ul class="descriptionWeather">
               <li>Humidity: <span id="humidity"></span>%</li>
@@ -47,88 +43,9 @@
           </div>
         </div>
       </div>
-
+<div class="border"></div>
       <div class="footer">
-        <div class="footerweekday">
-          <strong> <em> Now </em> </strong>
-          <br />
-          <img
-            class="icons"
-            src="src/sun-icon.png"
-            height="25px"
-            width="25px"
-            alt="sun"
-          />
-          <br />
-          <p class="footerdegree">+25°</p>
         </div>
-        <div class="footerweekday">
-          <strong><em>Sun </em> </strong>
-          <br />
-          <img
-            class="icons"
-            src="src/sun-icon.png"
-            height="25px"
-            width="25px"
-            alt="sun"
-          />
-          <br />
-          <p class="footerdegree">+27°</p>
-        </div>
-        <div class="footerweekday">
-          <strong> <em>Mon</em> </strong>
-          <br />
-          <img
-            class="icons"
-            src="src/cloudy.png"
-            alt="cloudy"
-            height="25px"
-            width="25px"
-          />
-          <br />
-          <p class="footerdegree">+22°</p>
-        </div>
-        <div class="footerweekday">
-          <strong> <em> Tue </em> </strong>
-          <br />
-          <img
-            class="icons"
-            src="src/sun-icon.png"
-            height="25px"
-            width="25px"
-            alt="sun"
-          />
-          <br />
-          <p class="footerdegree">+25°</p>
-        </div>
-        <div class="footerweekday">
-          <strong> <em>Wed</em> </strong>
-          <br />
-          <img
-            class="icons"
-            src="src/cloudy.png"
-            alt="cloudy"
-            height="25px"
-            width="25px"
-          />
-          <br />
-          <p class="footerdegree">+21°</p>
-        </div>
-        <div class="footerweekday">
-          <strong> <em>Thu</em> </strong>
-          <br />
-          <img
-            class="icons"
-            src="src/sun-icon.png"
-            height="25px"
-            width="25px"
-            alt="sun"
-          />
-          <br />
-          <p class="footerdegree">+25°</p>
-        </div>
-      </div>
-    </div>
     <div>
       <small>
         <a href="https://github.com/chavykina/Weather-app" target="_blank">
